# pulumi-aiven

./: .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .travis.yml  .upgrade-config.yml  CHANGELOG.md  Makefile  Makefile.github  README.md  aiven-packr.go  aiven-packr2.go  go.mod  go.mod.old  go.sum  go.work  go.work.sum  mise.toml  resources.go  test.sh
.claude/: CLAUDE.md
.github/: copilot-instructions.md
docs/: _index.md
examples/: examples_dotnet_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod  go.sum  (+1 more)
sdk/python/: Pulumi.yaml  README.md  README.rst  pyproject.toml  setup.py
sdk/python/pulumi_aiven/: README.md  __init__.py  _inputs.py  _tables.py  account.py  account_authentication.py  account_team.py  account_team_member.py  account_team_project.py  alloydbomni.py  alloydbomni_database.py  alloydbomni_user.py  aws_org_vpc_peering_connection.py  aws_privatelink.py  aws_vpc_peering_connection.py  azure_org_vpc_peering_connection.py  azure_privatelink.py  azure_privatelink_connection_approval.py  azure_vpc_peering_connection.py  billing_group.py  byoc_aws_entity.py  byoc_aws_provision.py  byoc_permissions.py  cassandra.py  cassandra_user.py  clickhouse.py  clickhouse_database.py  clickhouse_grant.py  clickhouse_role.py  clickhouse_user.py  cmk.py  connection_pool.py  database.py  dragonfly.py  elastic_search.py  elastic_search_acl.py  elastic_search_acl_config.py  elastic_search_acl_rule.py  flink.py  flink_application.py  (+176 more)
sdk/python/pulumi_aiven/config/: __init__.pyi  vars.py
(+5182 files in other folders)
